@startuml ClassDiagram

class Investor <entity>{
    + name: String
    + email: String
    - password: String
    + wallets: [PortfolioManager]
    + favorites: [Asset]
    + totalValue ()
    + totalPNL ()
    + addFavorite ()
    + removeFavorite ()
    + addWallet (name)
    + getWallet (name)
    + removeWallet (name)
}

class PortfolioManager <entity> {
    + name: String
    + portfolio: [PortfolioEntry]
    + transactions: [Transaction]
    + totalPNL ()
    + totalValue ()
    + getPortfolioEntry (name)
    + addAsset (asset, amount, price)
    + buyAsset (asset, amount, price)
    + sellAsset (asset, amount, price)
    + removeAsset (asset, price, savePNL)
}

class Asset <entity> {
    + symbol: String
    + name: String
    + type: String
}

class PortfolioEntry <portfolioEntryObject> {
    + asset: Asset
    + amount: Number
    - boughtAmount: Number
    + avgBuyPrice: Number
    + transactions: [Transaction]
    + value (price)
    + unrealizedPNL (price)
    + totalPNL ()
}

class Transaction <transactionObject> {
    + time: Number / Datetime
    + asset: Asset
    + type: Type
    + amount: Number
    + price: Number
    + pnl: Number
}

enum AssetType <enum> {
    COIN
    TOKEN
    CURRENCY
}

enum TransactionType <enum> {
    ADD
    REMOVE
    BUY
    SELL
}

PortfolioManager "n" <-UP-* "1" Investor: owns <
Asset <|-- PortfolioEntry
PortfolioEntry "1" o--> "n" Transaction: has >
PortfolioManager "1" o--> "n" Transaction: has >
PortfolioManager "1" o--> "n" PortfolioEntry: has >
Asset  --> "1" AssetType
Transaction --> "1" TransactionType
Investor "1" --> "n" Asset

@enduml